fix scrollbar

--- a/camera-2/css/main.css
+++ b/camera-2/css/main.css
@@ -138,6 +138,11 @@ html, body{
 #imgContainer {
     width: 100%;
     height: 100%;
+    -ms-overflow-style: none; /* for IE 10+ */
+}
+
+#imgContainer:-webkit-scrollbar {
+    width: 0 !important;
 }
 
 #imgContainer div{
